[package]
name = "sovd-security-helper"
version = "1.0.0"
description = "Security key derivation helper for SOVD Explorer"
edition = "2021"

[[bin]]
name = "sovd-security-helper"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
toml = "0.8"
